Closed Bug 369167 Opened 18 years ago Closed 18 years ago

[FIX]Some methods which aren't NS_IMETHOD are marked so in nsContentSink

Categories

(Core :: DOM: Core & HTML, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

Attachments

(1 file)

Attached patch fixSplinter Review
Looks like fallout from bug 18333
Attachment #253830 - Flags: superreview?(jonas)
Attachment #253830 - Flags: review?(jonas)
Attachment #253830 - Flags: superreview?(jonas)
Attachment #253830 - Flags: superreview+
Attachment #253830 - Flags: review?(jonas)
Attachment #253830 - Flags: review+
Fixed.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Flags: in-testsuite-
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: