These aren't actually interface methods.  Bug 369167, r+sr=sicking